# ghostpost_backend

./: README.md  pyproject.toml
api/: serializers.py  urls.py  views.py
ghostpost/: admin.py  forms.py  models.py  urls.py  views.py
ghostpost/migrations/: 0001_initial.py  0002_auto_20200623_2010.py  0003_auto_20200623_2012.py  0004_auto_20200624_2032.py
ghostpost/templates/: addpost.html
ghostpost_backend/: settings.py  urls.py
